--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
 
     <div class="main-wrapper">
-        <div class="top">T</div>
-        <div class="left">L</div>
+        <div class="top"></div>
+        <div class="left"></div>
         <div class="center">
 
             <div class="karl-div">
@@ -271,8 +271,8 @@
 
 
         </div>
-        <div class="right">R</div>
-        <div class="bottom">B</div>
+        <div class="right"></div>
+        <div class="bottom"></div>
 
 
     </div>
