--- a/index.html
+++ b/index.html
@@ -252,23 +252,23 @@
             </div>
 
             <div class="circle-bg">
-               <div class="circle-container">
-                <?xml version="1.0" encoding="UTF-8"?><svg id="graph-circle-group" xmlns="http://www.w3.org/2000/svg"
-                viewBox="0 0 1409.82 1337.65">
-                <path mask="url(#real-mask-graph-circle)"  id="graph-circle"
-                    d="M615.65,1310.54C331.84,1277.59,42.03,1053.64,21.45,754.59c-8.99-167.02,86.77-325.12,213.45-427.69,60.88-48.6,130.17-85.81,201.39-116.84,71.67-31.44,145.82-57.11,221.29-77.54,86.05-24.29,175.87-40.83,265.44-30.31-87.05-24.2-176.92-35.83-265.58-52.46-18.93-2.06-26.29-28.5-10.6-39.75,4.57-3.54,10.88-5.44,16.65-4.44,55.28,9.55,110.53,19.26,165.76,29.07,92.99,17.04,184.45,45.27,266.8,92.43,27.36,13.55,50.08,35.27,78.33,46.67,53.99,26.04,102.97,61.41,148.06,100.7,9.21,8.29,18.03,17.01,26.98,25.58,1.48,1.45,1.45,3.93,0,5.38-1.48,1.48-3.89,1.45-5.37,0-15.85-15.74-32.46-30.61-49.67-44.83-33.89-27.16-69.6-52.34-108.21-72.37,138.71,108.76,210.94,286.15,207.51,460.4,2.33,392.91-394.88,714.88-778.03,661.95Zm76.19-11.53c250.03,3,492.76-151.05,606.89-371.64,61.56-119.68,77.47-260.63,51.08-392.1-26.58-138.5-108.73-263.99-227.18-341.07-65.3-40.97-136.72-83.05-215.55-85.18-132.14-8.85-260.59,34.05-384.25,75.49-82.79,30.74-164.54,66.06-238.2,115.26C119.68,409.1-4.17,610.85,39.61,812.96c62.55,289.75,364.37,487.98,652.23,486.05Z" />
+                <div class="circle-container">
+                    <?xml version="1.0" encoding="UTF-8"?><svg id="graph-circle-group"
+                        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1409.82 1337.65">
+                        <path mask="url(#real-mask-graph-circle)" id="graph-circle"
+                            d="M615.65,1310.54C331.84,1277.59,42.03,1053.64,21.45,754.59c-8.99-167.02,86.77-325.12,213.45-427.69,60.88-48.6,130.17-85.81,201.39-116.84,71.67-31.44,145.82-57.11,221.29-77.54,86.05-24.29,175.87-40.83,265.44-30.31-87.05-24.2-176.92-35.83-265.58-52.46-18.93-2.06-26.29-28.5-10.6-39.75,4.57-3.54,10.88-5.44,16.65-4.44,55.28,9.55,110.53,19.26,165.76,29.07,92.99,17.04,184.45,45.27,266.8,92.43,27.36,13.55,50.08,35.27,78.33,46.67,53.99,26.04,102.97,61.41,148.06,100.7,9.21,8.29,18.03,17.01,26.98,25.58,1.48,1.45,1.45,3.93,0,5.38-1.48,1.48-3.89,1.45-5.37,0-15.85-15.74-32.46-30.61-49.67-44.83-33.89-27.16-69.6-52.34-108.21-72.37,138.71,108.76,210.94,286.15,207.51,460.4,2.33,392.91-394.88,714.88-778.03,661.95Zm76.19-11.53c250.03,3,492.76-151.05,606.89-371.64,61.56-119.68,77.47-260.63,51.08-392.1-26.58-138.5-108.73-263.99-227.18-341.07-65.3-40.97-136.72-83.05-215.55-85.18-132.14-8.85-260.59,34.05-384.25,75.49-82.79,30.74-164.54,66.06-238.2,115.26C119.68,409.1-4.17,610.85,39.61,812.96c62.55,289.75,364.37,487.98,652.23,486.05Z" />
 
-                <defs>
-                    <mask id="real-mask-graph-circle">
-                        <path class="mask-circle" id="mask-graph-circle"
-                            d="M1349.68,306.89s-158.48-191.16-452.58-204.23c-86.59,1.63-140.51,3.27-336.57,63.72S179.84,349.37,134.09,434.33s-96.4,135.61-104.57,241.81,8.17,192.8,53.92,279.39,169.92,217.3,272.85,263.05,202.6,89.86,303.9,91.5,248.35-22.87,344.74-80.06,220.57-138.88,284.29-263.05,125.81-281.02,73.52-459.11S1235.31,105.93,658.56,27.5"
-                            fill="none" stroke="#d3d31c" stroke-linecap="round" stroke-linejoin="round"
-                            stroke-width="55" />
-                    </mask>
-                </defs>
-            </svg>
+                        <defs>
+                            <mask id="real-mask-graph-circle">
+                                <path class="mask-circle" id="mask-graph-circle"
+                                    d="M1349.68,306.89s-158.48-191.16-452.58-204.23c-86.59,1.63-140.51,3.27-336.57,63.72S179.84,349.37,134.09,434.33s-96.4,135.61-104.57,241.81,8.17,192.8,53.92,279.39,169.92,217.3,272.85,263.05,202.6,89.86,303.9,91.5,248.35-22.87,344.74-80.06,220.57-138.88,284.29-263.05,125.81-281.02,73.52-459.11S1235.31,105.93,658.56,27.5"
+                                    fill="none" stroke="#d3d31c" stroke-linecap="round" stroke-linejoin="round"
+                                    stroke-width="55" />
+                            </mask>
+                        </defs>
+                    </svg>
 
-               </div>
+                </div>
             </div>
 
 
